<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->

    <com.nevergiveup.views.HeaderView
        android:id="@+id/aboutus_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dip"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_name"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_name"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_version"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_version"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_provider"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_provider"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_phone"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_phone"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_fax"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_fax"
                    android:textSize="16sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/font_about_us_left_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_th_address"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="@dimen/font_about_us_right_length"
                    android:layout_height="@dimen/font_larger"
                    android:layout_gravity="left"
                    android:hint="@string/aboutus_td_address"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.nevergiveup.views.BottomView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
