<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.shangjia.ChangePasswordFragment">-->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/page_title_changepassword"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="16dip"
                android:singleLine="true"
                android:textSize="40dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.nevergiveup.component.MyEditText
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_old_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/id_old_password"
                    android:drawableRight="@drawable/icon_button_right_delete"
                    android:textCursorDrawable="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_old_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/loginNameForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_new_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/id_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_new_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_new_password_again"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/id_new_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_new_password_again"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/submit_changepassword_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18dp"
                    android:text="@string/action_submit_change_password"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
