<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content_bg"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:weightSum="4">
        <TextView
            android:id="@+id/id_bottom_menu_scan"
            android:drawableTop="@drawable/bottom_menu_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/center_scan_code"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="16dip"
            />
        <TextView
            android:id="@+id/id_bottom_menu_setting"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/bottom_menu_setting"
            android:hint="@string/center_soft_setting"
            android:textSize="16dip"
            android:gravity="center_horizontal"
            android:background="@color/white"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/id_bottom_menu_update"
            android:drawableTop="@drawable/bottom_menu_update"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="16dip"
            android:gravity="center_horizontal"
            android:hint="@string/center_soft_update"
            android:background="@color/white"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/id_bottom_menu_aboutus"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/center_about_us"
            android:drawableTop="@drawable/bottom_menu_aboutus"
            android:textSize="16dip"
            android:background="@color/white"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>