<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->

    <com.nevergiveup.views.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <com.nevergiveup.component.MyEditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height_middle"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_register_user_name"
                android:drawableRight="@drawable/icon_button_right_delete"
                android:hint="@string/label_account"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />


            <com.nevergiveup.component.MyEditText
                android:id="@+id/authCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height_middle"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_register_verification_"
                android:drawableRight="@drawable/icon_button_right_delete"
                android:hint="@string/prompt_authCode"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

            <com.nevergiveup.component.MyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height_middle"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_register_pwd"
                android:drawableRight="@drawable/icon_button_right_delete"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height_middle"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="13dip"
                android:background="@drawable/search_text_view_border"
                android:onClick="onBindClick"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <Button
                android:id="@+id/page_test"
                style="?android:textAppearanceSmall"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/page_test_main"
                android:textSize="15dp"
                android:textStyle="italic" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
