<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->

    <com.nevergiveup.views.HeaderView
        android:id="@+id/center_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/tabs_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fadingEdgeLength="0dip"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/content_bg"
            android:orientation="vertical">

            <!--扫码-->
            <TextView
                android:id="@+id/id_CenterScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/white"
                android:drawableLeft="@drawable/home_actionbar_menu_scan"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_scan_code"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

            <!--历史记录-->
            <TextView
                android:id="@+id/id_CenterHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="5dip"
                android:drawableLeft="@drawable/icon_set_history"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_check_history"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

            <!--修改密码-->
            <TextView
                android:id="@+id/id_CenterChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_set_change_pwd"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_change_password"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <!--软件设置-->

            <TextView
                android:id="@+id/id_CenterSoftSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_set_set"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_soft_setting"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

            <!--更新-->
            <TextView
                android:id="@+id/id_CenterSoftUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="5dip"
                android:drawableLeft="@drawable/icon_set_update"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_soft_update"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <!--关于我们-->
            <TextView
                android:id="@+id/id_CenterAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_set_about"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center|left"
                android:padding="10dip"
                android:paddingLeft="30dip"
                android:text="@string/center_about_us"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/divider_horizontal" />

        </LinearLayout>
    </ScrollView>


    <com.nevergiveup.views.BottomView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
